--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "popper.js": "^1.14.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-scripts": "2.1.0",
+    "recharts": "^1.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
