--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "popper.js": "^1.14.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
     "recharts": "^1.3.6"
   },
